# dizzimg

./: .gitignore  README.md  run.py  setup.cfg
dizzimg/: __init__.py  dots.py  helper.py  smash.py  tiles.py
