[metadata]
name = dizzimg
version = 0.0.1
author = Imset
author_email = imset-dev@outlook.com
description = An image manipulation package built on Pillow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imset/dizzimg
project_urls =
    Bug Tracker = https://github.com/imset/dizzimg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9.1
install_requires = 
    Pillow==9.1.1
    fast-colorthief==0.0.4
    colorthief==0.2.1
    numpy==1.22.3
zip_safe = False
include_package_data = True

[options.package_data]
dizzimg = ../data
* = README.md